# LogitechRS50TrueForceSDK

./: .gitignore  CMakeLists.txt  README.md
examples/: amplitude_sweep.cpp  amplitude_sweep.py  bumps.cpp  bumps.py  custom_waveforms.cpp  custom_waveforms.py  engine_rumble.cpp  engine_rumble.py  frequency_sweep.cpp  frequency_sweep.py  road_texture.cpp  road_texture.py  test_modes.py
tools/: test_modes.cpp
trueforce/: __init__.py  device.cpp  device.hpp  device.py  protocol.cpp  protocol.hpp  protocol.py  wheel.cpp  wheel.hpp  wheel.py
